Added Logic to save items  and show the list of items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SimpleTodo</string>
     <string name="add_item">Item</string>
+    <string name="item">Item</string>
 </resources>
